# jsonrpc-utils

./: .gitignore  README.md  README.rst  pyproject.toml
jsonrpc/: __init__.py  jsonrpc.py
tests/: test_jsonrpc.py
